--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- Reset font -->
+
+    <link rel="stylesheet" href="./access/css/reset.css" />
+
+    <!-- Style -->
+
+    <link rel="stylesheet" href="./access/css/style.css" />
+    <title>SBook</title>
   </head>
   <body></body>
 </html>
