--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 
     <link rel="stylesheet" href="./access/css/reset.css" />
 
+    <!-- Nhúng font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Thêm icon -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+
     <!-- Style -->
 
     <link rel="stylesheet" href="./access/css/style.css" />
