Code phần header

--- a/index.html
+++ b/index.html
@@ -27,5 +27,54 @@
     <link rel="stylesheet" href="./access/css/style.css" />
     <title>SBook</title>
   </head>
-  <body></body>
+  <body style="height: 10000px">
+    <!-- header -->
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body-header">
+          <!-- logo -->
+          <img src="./access/img/logo.png" alt="SBook" class="logo" />
+
+          <!-- search -->
+          <div class="se">
+            <form action="" class="search" method="post">
+              <input
+                type="text"
+                class="searchTerm"
+                placeholder="Bạn muốn tìm sách gì?"
+              />
+              <button type="submit" class="searchButton">Search</button>
+            </form>
+          </div>
+          <!-- nav -->
+
+          <nav class="nav">
+            <ul>
+              <li>
+                <a href="#!"
+                  ><img
+                    src="./access/icon/Dang-nhap.png"
+                    alt=""
+                    class="DN"
+                  />Đăng nhập</a
+                >
+              </li>
+              <li>
+                <a href="#!"
+                  ><img src="./access/icon/Dang-ky.jpg" alt="" class="DK" />Đăng
+                  ký</a
+                >
+              </li>
+              <li>
+                <a href="#!"><i class="fa-regular fa-heart"></i></a>
+              </li>
+              <li>
+                <a href="#!"><i class="fa-solid fa-bag-shopping"></i></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
