--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <div class="main-content">
         <div class="body-header">
           <!-- logo -->
-          <img src="./access/img/logo.png" alt="SBook" class="logo" />
-
+          <!-- Click vào logo sẽ chuyển về trang chủ -->
+          <a href="./index.html"
+            ><img src="./access/img/logo.png" alt="SBook" class="logo"
+          /></a>
           <!-- search -->
           <div class="se">
             <form action="" class="search" method="post">
