--- a/index.html
+++ b/index.html
@@ -78,5 +78,19 @@
         </div>
       </div>
     </header>
+
+    <!-- Main -->
+    <main>
+      <!-- Sach_moi -->
+      <div class="new">
+        <div class="main-content">
+          <div class="title-top">
+            <div class="info">
+              <h2 class="heading-lv2">SÁCH MỚI</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
