--- a/index.html
+++ b/index.html
@@ -89,6 +89,128 @@
               <h2 class="heading-lv2">SÁCH MỚI</h2>
             </div>
           </div>
+          <!-- Thêm sách -->
+          <div class="book-sale">
+            <!-- item 1 sale -->
+            <div class="book-item">
+              <a href="#!">
+                <img src="./Access/img/s1.1.jpg" alt="s1" class="thumb" />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Theo nghề kiến trúc</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">54,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                  >
+                    60,000₫
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- item 2 sale -->
+            <div class="book-item">
+              <a href="#!">
+                <img src="./Access/img/s1.2.jpg" alt="s2" class="thumb" />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Mái ấm mới của hạt dẻ</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">63,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >70,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- item 3 sale -->
+            <div class="book-item">
+              <a href="#!"
+                ><img src="./Access/img/s1.3.jpg" alt="s3" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Ông già và biển cả</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">40,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >45,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item 4 sale -->
+            <div class="book-item">
+              <a href="#!"
+                ><img src="./Access/img/s1.4.jpg" alt="s4" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Robinson Crusoe</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">45,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >50,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item 5 sale -->
+            <div class="book-item">
+              <a href="#!"
+                ><img src="./Access/img/s1.5.jpg" alt="s5" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Tự giác và tự lập</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">77,400₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >86,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Xem thêm -->
+          <div class="more">
+            <div class="xemthem">
+              <a href="#!">xem thêm >> </a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
