Thêm 1 sách nữa

--- a/index.html
+++ b/index.html
@@ -204,6 +204,29 @@
                 </div>
               </div>
             </div>
+
+            <!-- item 6 sale -->
+            <div class="book-item">
+              <a href="#!"
+                ><img src="./Access/img/s1.6.jpg" alt="s6" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Thơ Hàm Mặc Tử</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">43,200₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >48,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
           </div>
           <!-- Xem thêm -->
           <div class="more">
