--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
             <!-- item 1 sale -->
             <div class="book-item">
               <a href="#!">
-                <img src="./Access/img/s1.1.jpg" alt="s1" class="thumb" />
+                <img
+                  src="./Access/img/Sale book/s1.1.jpg"
+                  alt="Theo nghề kiến trúc"
+                  class="thumb thumb-lv2"
+                />
               </a>
               <div class="info">
                 <div class="head">
@@ -118,7 +122,11 @@
             <!-- item 2 sale -->
             <div class="book-item">
               <a href="#!">
-                <img src="./Access/img/s1.2.jpg" alt="s2" class="thumb" />
+                <img
+                  src="./Access/img/Sale book/s1.2.jpg"
+                  alt="Mái ấm mới của hạt dẻ"
+                  class="thumb thumb-lv2"
+                />
               </a>
               <div class="info">
                 <div class="head">
@@ -141,7 +149,10 @@
             <!-- item 3 sale -->
             <div class="book-item">
               <a href="#!"
-                ><img src="./Access/img/s1.3.jpg" alt="s3" class="thumb"
+                ><img
+                  src="./Access/img/Sale book/s1.3.jpg"
+                  alt="Ông già và biển cả"
+                  class="thumb thumb-lv2"
               /></a>
               <div class="info">
                 <div class="head">
@@ -163,7 +174,10 @@
             <!-- item 4 sale -->
             <div class="book-item">
               <a href="#!"
-                ><img src="./Access/img/s1.4.jpg" alt="s4" class="thumb"
+                ><img
+                  src="./Access/img/Sale book/s1.4.jpg"
+                  alt="Robinson Crusoe"
+                  class="thumb thumb-lv2"
               /></a>
               <div class="info">
                 <div class="head">
@@ -185,7 +199,10 @@
             <!-- item 5 sale -->
             <div class="book-item">
               <a href="#!"
-                ><img src="./Access/img/s1.5.jpg" alt="s5" class="thumb"
+                ><img
+                  src="./Access/img/Sale book/s1.5.jpg"
+                  alt="Tự giác và tự lập"
+                  class="thumb thumb-lv2"
               /></a>
               <div class="info">
                 <div class="head">
@@ -208,7 +225,10 @@
             <!-- item 6 sale -->
             <div class="book-item">
               <a href="#!"
-                ><img src="./Access/img/s1.6.jpg" alt="s6" class="thumb"
+                ><img
+                  src="./Access/img/Sale book/s1.6.jpg"
+                  alt="Thơ Hàm Mặc Tử"
+                  class="thumb thumb-lv2"
               /></a>
               <div class="info">
                 <div class="head">
@@ -223,6 +243,156 @@
                     class="price none_sale"
                     style="text-decoration: line-through"
                     >48,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Xem thêm -->
+          <div class="more">
+            <div class="xemthem">
+              <a href="#!">xem thêm >> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Sach_ban_chay -->
+      <div class="new">
+        <div class="main-content">
+          <div class="title-top">
+            <div class="info">
+              <h2 class="heading-lv2">SÁCH BÁN CHẠY</h2>
+            </div>
+          </div>
+          <!-- Thêm sách -->
+          <div class="book-sale">
+            <!-- item 1 best sell -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/Top sell/2.1.jpg"
+                  alt="Lân tinh"
+                  class="thumb thumb-lv2"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Lân tinh</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">54,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                  >
+                    60,000₫
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- item 2 best sell -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/Top sell/2.2.jpg"
+                  alt="Chén thánh của Eris- Tập 4"
+                  class="thumb thumb-lv2"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Chén thánh của Eris- Tập 4</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">85,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >95,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- item 3 best sell -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Top sell/2.3.jpg"
+                  alt="Búp sen xanh"
+                  class="thumb thumb-lv2"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Búp sen xanh</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">64,800₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >72,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item 4 best sell -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Top sell/2.4.jpg"
+                  alt="Dưới bầu trời xa cách"
+                  class="thumb thumb-lv2"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Dưới bầu trời xa cách</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">58,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >65,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item 5 best sell -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Top sell/2.5.jpg"
+                  alt="Doanh nhân thế giới - Newton"
+                  class="thumb thumb-lv2"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book">Doanh nhân thế giới - Newton</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >30,000₫</span
                   >
                 </div>
               </div>
