Xoá 1 vài thứ k cần tới

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img
                   src="./Access/img/Sale book/s1.1.jpg"
                   alt="Theo nghề kiến trúc"
-                  class="thumb thumb-lv2"
+                  class="thumb"
                 />
               </a>
               <div class="info">
@@ -125,7 +125,7 @@
                 <img
                   src="./Access/img/Sale book/s1.2.jpg"
                   alt="Mái ấm mới của hạt dẻ"
-                  class="thumb thumb-lv2"
+                  class="thumb"
                 />
               </a>
               <div class="info">
@@ -152,7 +152,7 @@
                 ><img
                   src="./Access/img/Sale book/s1.3.jpg"
                   alt="Ông già và biển cả"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -177,7 +177,7 @@
                 ><img
                   src="./Access/img/Sale book/s1.4.jpg"
                   alt="Robinson Crusoe"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -202,7 +202,7 @@
                 ><img
                   src="./Access/img/Sale book/s1.5.jpg"
                   alt="Tự giác và tự lập"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -228,7 +228,7 @@
                 ><img
                   src="./Access/img/Sale book/s1.6.jpg"
                   alt="Thơ Hàm Mặc Tử"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -273,7 +273,7 @@
                 <img
                   src="./Access/img/Top sell/2.1.jpg"
                   alt="Lân tinh"
-                  class="thumb thumb-lv2"
+                  class="thumb"
                 />
               </a>
               <div class="info">
@@ -301,7 +301,7 @@
                 <img
                   src="./Access/img/Top sell/2.2.jpg"
                   alt="Chén thánh của Eris- Tập 4"
-                  class="thumb thumb-lv2"
+                  class="thumb"
                 />
               </a>
               <div class="info">
@@ -328,7 +328,7 @@
                 ><img
                   src="./Access/img/Top sell/2.3.jpg"
                   alt="Búp sen xanh"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -353,7 +353,7 @@
                 ><img
                   src="./Access/img/Top sell/2.4.jpg"
                   alt="Dưới bầu trời xa cách"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
@@ -378,7 +378,7 @@
                 ><img
                   src="./Access/img/Top sell/2.5.jpg"
                   alt="Doanh nhân thế giới - Newton"
-                  class="thumb thumb-lv2"
+                  class="thumb"
               /></a>
               <div class="info">
                 <div class="head">
