Thêm 1 sô thứ :))

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Theo nghề kiến trúc</h3>
+                  <h3 class="name-book break-all">Theo nghề kiến trúc</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -130,7 +130,7 @@
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Mái ấm mới của hạt dẻ</h3>
+                  <h3 class="name-book break-all">Mái ấm mới của hạt dẻ</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -156,7 +156,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Ông già và biển cả</h3>
+                  <h3 class="name-book break-all">Ông già và biển cả</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -181,7 +181,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Robinson Crusoe</h3>
+                  <h3 class="name-book break-all">Robinson Crusoe</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -206,7 +206,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Tự giác và tự lập</h3>
+                  <h3 class="name-book break-all">Tự giác và tự lập</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -232,7 +232,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Thơ Hàm Mặc Tử</h3>
+                  <h3 class="name-book break-all">Thơ Hàm Mặc Tử</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -278,7 +278,7 @@
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Lân tinh</h3>
+                  <h3 class="name-book break-all">Lân tinh</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -306,7 +306,9 @@
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Chén thánh của Eris- Tập 4</h3>
+                  <h3 class="name-book break-all">
+                    Chén thánh của Eris- Tập 4
+                  </h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -332,7 +334,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Búp sen xanh</h3>
+                  <h3 class="name-book break-all">Búp sen xanh</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -357,7 +359,7 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Dưới bầu trời xa cách</h3>
+                  <h3 class="name-book break-all">Dưới bầu trời xa cách</h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
@@ -382,7 +384,9 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="name-book">Doanh nhân thế giới - Newton</h3>
+                  <h3 class="name-book break-all">
+                    Doanh nhân thế giới - Newton
+                  </h3>
                 </div>
                 <div class="sale">
                   <p class="sale_number">-10%</p>
