--- a/index.html
+++ b/index.html
@@ -410,6 +410,208 @@
           </div>
         </div>
       </div>
+
+      <!-- slogan 1 -->
+      <div class="slogan">
+        <div class="main-content">
+          <div class="slogan-list">
+            <a href="#!" class="slg"
+              ><img
+                src="./Access/nho_den_lon.jpg"
+                alt="Từ cuốn sách nhỏ đến thế giới lớn"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- combo -->
+      <div class="new">
+        <div class="main-content">
+          <div class="title-top">
+            <div class="info">
+              <h2 class="heading-lv2">COMBO</h2>
+            </div>
+          </div>
+          <!-- Thêm sách -->
+          <div class="book-sale">
+            <!-- item combo 1 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/COMBO/CB1.jpg"
+                  alt="Combo Dragon Ball full color phần một"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Dragon Ball full color phần một
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">277,200₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                  >
+                    308,000₫
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- item combo 2 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/COMBO/CB2.jpg"
+                  alt="Combo Thám tử lừng danh conan"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Thám tử lừng danh conan
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">108,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >120,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- item combo 3 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/COMBO/CB3.jpg"
+                  alt="Combo Dragon Ball full color - Phần một"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Dragon Ball full color - Phần một
+                  </h3>
+                </div>
+                <!-- Có sale thì bật lại -->
+                <!-- <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div> -->
+                <div class="foot">
+                  <span class="price sale">616,000₫</span>
+                  <!-- <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >45,000₫</span
+                  > -->
+                </div>
+              </div>
+            </div>
+            <!-- item combo 4 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/COMBO/CB4.jpg"
+                  alt="Combo Cung hoàng đạo Cổ đại ( 3 cuốn)"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Cung hoàng đạo Cổ đại ( 3 cuốn)
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-83%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">15,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >90,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item combo 5 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/COMBO/CB5.jpg"
+                  alt="Combo Tục ngữ - Ca dao- Dân ca Việt Nam"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Tục ngữ - Ca dao- Dân ca Việt Nam
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-20%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">152,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >190,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- item combo 6 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/COMBO/CB6.jpg"
+                  alt="Combo Doraemon Thế giới khoa học (5 quyển)"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Combo Doraemon Thế giới khoa học (5 quyển)
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">202,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >225,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Xem thêm -->
+          <div class="more">
+            <div class="xemthem">
+              <a href="#!">xem thêm >> </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
