Thêm phần dora e mon vs manga comic

--- a/index.html
+++ b/index.html
@@ -401,6 +401,34 @@
                 </div>
               </div>
             </div>
+
+            <!-- item 6 best sell -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Top sell/2.6.jpg"
+                  alt=" Nuôi dạy teen giữa thời đại lo âu"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Nuôi dạy teen giữa thời đại lo âu
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">67,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >75,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
           </div>
           <!-- Xem thêm -->
           <div class="more">
@@ -577,7 +605,7 @@
             </div>
 
             <!-- item combo 6 -->
-            <div class="book-item">
+            <!-- <div class="book-item">
               <a href="#!"
                 ><img
                   src="./Access/img/COMBO/CB6.jpg"
@@ -599,6 +627,400 @@
                     class="price none_sale"
                     style="text-decoration: line-through"
                     >225,000₫</span
+                  >
+                </div>
+              </div>
+            </div> -->
+          </div>
+          <!-- Xem thêm -->
+          <div class="more">
+            <div class="xemthem">
+              <a href="#!">xem thêm >> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- slogan 2 -->
+      <div class="slogan">
+        <div class="main-content">
+          <div class="slogan-list">
+            <a href="#!" class="slg"
+              ><img src="./Access/maga-colect.jpg" alt="Manga collection"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- manga comic -->
+      <div class="new">
+        <div class="main-content">
+          <div class="title-top">
+            <div class="info">
+              <h2 class="heading-lv2">MANGA - COMIC</h2>
+            </div>
+          </div>
+          <!-- Thêm sách -->
+          <div class="book-sale">
+            <!-- manga comic 1 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/Maga - comic/MC7.jpg"
+                  alt="Dr. STONE"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">Dr. STONE</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                  >
+                    30,000₫
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- manga comic 2 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/Maga - comic/MC2.jpg"
+                  alt="Em đến cùng mưa"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">Em đến cùng mưa</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">34,200₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >38,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- Manga comic 3 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Maga - comic/MC10.jpg"
+                  alt="One-Punch Man "
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">One-Punch Man</h3>
+                </div>
+
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">22,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >25,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item combo 4 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Maga - comic/MC4.jpg"
+                  alt="Nhà có năm nàng dâu - Tập 1"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Nhà có năm nàng dâu - Tập 1
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >30,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- item combo 5 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Maga - comic/MC5.jpg"
+                  alt="Doraemon - Tuyển tập theo chủ đề"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon - Tuyển tập theo chủ đề
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">31,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >35,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- item combo 6 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/Maga - comic/MC6.jpg"
+                  alt="One-Punch Man - Tập 30 "
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">One-Punch Man - Tập 30</h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,00₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >30,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="more">
+            <div class="xemthem">
+              <a href="#!">xem thêm >> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slogan 3 -->
+      <div class="slogan">
+        <div class="main-content">
+          <div class="slogan-list">
+            <a href="#!" class="slg"
+              ><img src="./Access/doraemon.jpg" alt="Doraemon"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- DORAEMON -->
+      <div class="new">
+        <div class="main-content">
+          <div class="title-top">
+            <div class="info">
+              <h2 class="heading-lv2">DORAEMON</h2>
+            </div>
+          </div>
+          <!-- Thêm sách -->
+          <div class="book-sale">
+            <!-- Doraemon 1 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/DORAEMON/D1.jpg"
+                  alt="Doraemon Movie Story Màu - Nobita và cuộc phiêu lưu vào thế giới trong tranh"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon Movie Story Màu - Nobita và cuộc phiêu lưu vào thế
+                    giới trong tranh
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">54,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                  >
+                    60,000₫
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Doraemon 2 -->
+            <div class="book-item">
+              <a href="#!">
+                <img
+                  src="./Access/img/DORAEMON/D2.jpg"
+                  alt="Doraemon Movie Story Màu - Nobita và chuyến thám hiểm Nam Cực Kachi Kochi"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon Movie Story Màu - Nobita và chuyến thám hiểm Nam
+                    Cực Kachi Kochi
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">31,5 00₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >35,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- doraemon 3 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/DORAEMON/D3.jpg"
+                  alt="Doraemon Movie Story - Tân Nobita và chuyến phiêu lưu vào xứ quỷ - 7 dũng sĩ phép thuật"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon Movie Story - Tân Nobita và chuyến phiêu lưu vào xứ
+                    quỷ - 7 dũng sĩ phép thuật
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >30,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- Doraemon 4 -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/DORAEMON/D4.jpg"
+                  alt="Doraemon Hoạt hình màu - Nobita và Viện bảo tàng bảo bối"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon Hoạt hình màu - Nobita và Viện bảo tàng bảo bối
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">31,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >35,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- Doraemon 5  -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/DORAEMON/D5.jpg"
+                  alt="Doraemon - Tuyển tập theo chủ đề"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon - Tuyển tập theo chủ đề
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">31,500₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >35,000₫</span
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- doraemon 6  -->
+            <div class="book-item">
+              <a href="#!"
+                ><img
+                  src="./Access/img/DORAEMON/D6.jpg"
+                  alt="Doraemon Tranh truyện màu - Nobita Tây du kí - Tập 1"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="name-book break-all">
+                    Doraemon Tranh truyện màu - Nobita Tây du kí - Tập 1
+                  </h3>
+                </div>
+                <div class="sale">
+                  <p class="sale_number">-10%</p>
+                </div>
+                <div class="foot">
+                  <span class="price sale">27,000₫</span>
+                  <span
+                    class="price none_sale"
+                    style="text-decoration: line-through"
+                    >30,000₫</span
                   >
                 </div>
               </div>
