code phần footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./access/css/style.css" />
     <title>SBook</title>
   </head>
-  <body style="height: 10000px">
+  <body>
     <!-- header -->
     <header class="header fixed">
       <div class="main-content">
@@ -1605,5 +1605,33 @@
         </div>
       </div>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="main-content">
+        <div class="row">
+          <div class="column">
+            <ul class="list">
+              <li>
+                <a href="./index.html"
+                  ><img src="./Access/img/logo.png" alt="logo"
+                /></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="column column-lv2">
+            <h3 class="title title-lv2">Thông tin liên hệ</h3>
+            <ul class="list">
+              <li>
+                <a href="https://www.facebook.com/hungsang.nguyen.5011"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
